--- a/css/style.css
+++ b/css/style.css
@@ -1,202 +1,665 @@
-<!DOCTYPE html>
-<html lang="ja">
-<body>
-	<head>
-		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>コーポレートサイト</title>
-		<script src="js/jquery-2.1.4.min.js"></script>
-		<script src="slick/slick.min.js"></script>
-		<script src="js/extention.js"></script>
-		<link rel="stylesheet" href="slick/slick.css">
-		<link rel="stylesheet" href="slick/slick-theme.css">
-		<link rel="stylesheet" href="css/style.css">
-	</head>
+@charset "UTF-8";
+/* デザインC(PC) */
 
-	<!-- jQuery-st -->
-	<script>
-		// ハンバーガーメニュー
-			$(function() {
-			$('.hamburger').click(function() {
-			$(this).toggleClass('active');
+/* ===========================
+            共通
+=========================== */
+body {
+	margin: 0;
+	padding: 0;
+	color: #444444;
+	background-color: #f3f3f3;
+}
+
+/* ===========================
+            ヘッダー
+=========================== */
+
+/* ハンバーガーメニュー非表示 */
+.globalMenuSp {
+	visibility: hidden;
+	height: 0;
+ }
+
+header {
+	width: 100%;
+	margin: 0 auto;
+	display: flex;
+	justify-content: space-around;
+	position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 500;
+    justify-content: space-around;
+	background-color: #ffffff;
+}
+
+.container {
+	width: 1120px;
+	margin: 0 auto;
+	display: flex;
+	justify-content: space-around;
+	/* border: double 2px; 後で削除 */
+}
+
+.logo-oya {
+	margin-top: 15px;
+}
+
+.logo-oya img {
+     text-align: center;
+}
+
+.nav-oya {
+	width: 720px;
+	/* background-color: yellowgreen; 後で削除 */
+}
+
+.nav ul {
+	width: 660px;
+	display: flex;
+	justify-content: space-between;
+	height:105px;
+	line-height: 105px;
+	/* background-color: #999; 後で削除 */
+}
+
+.nav ul li {
+	list-style: none;
+	color: 444444;
+}
+
+.nav li a {
+	/* font-weight: bold;
+	color: #444444; */
+	display: block;
+    position: relative;
+    height: 105px;
+    line-height: 105px; 
+    color: #444444;
+    padding: 0 15px;
+    text-decoration: none;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+/* ========hover=========== */
+.nav li:hover {
+	background-color: #444444;
+	color: #ffffff;
+}
+
+.nav li a:hover {
+	color: #ffffff;
+}
+/* ========hover=========== */
+
+
+/* ==========================
+       TOP
+============================= */
+.brand_main {
+	width: 100%;
+	margin: 0 auto;
+}
+
+.wrap {
+	width: 100%;
+	margin: 180px auto 0 auto;
+	/* background-color: #f3f3f3; */
+}
+
+ul {
+	padding: 0;
+	margin: 0 30px;
+	list-style: none;
+}
+ul li img {
+	max-width: 100%;
+	height: auto;
+}
+.slick-prev::before, .slick-next::before {
+	color: #333;
+}
+ 
+/* ==========================
+       ブランド展開
+============================= */
+.contents-oya {
+	width: 100%;
+	/* background-color: #f3f3f3; */
+	padding-top: 30px;
+}
+.brand_detail {
+	margin: 30px 0 100px 0;
+}
+
+.brand_ttl {
+	width: 630px;
+	margin: 0 auto;
+    text-align: center;
+	line-height: 30px;
+}
+
+.brand_ttl h1 {
+	margin-bottom: 30px;
+}
+span {
+	font-size: 18px;
+}
+
+
+/* ==========================
+          写真3列2行
+============================= */
+
+.brand-list{
+	width: 800px;
+	margin: 0 auto;
+	display: flex;
+	flex-wrap:wrap;
+	padding: 10px;
+	}
+
+.brand-list li {
+	width: calc(100%/3);/*←画像を横に3つ並べる場合*/
+	padding: 20px 0 20px 25px;/*←画像の左右余白を入れる場合*/
+	box-sizing:border-box;
+	list-style: none;
+	}
 	
-			if ($(this).hasClass('active')) {
-				$('.globalMenuSp').addClass('active');
-			} else {
-				$('.globalMenuSp').removeClass('active');
-			}
-		});
-	});
-    </script>   
-    <!-- jQuery-end -->
+.brand-list li img {
+	max-width:100%; /*画像のはみだしを防ぐ*/
+	height: auto; /*画像の縦横比を維持 */
+	}
+
+.brand-list p {
+	text-align: center;
+}
+/* ==========================
+         フッター
+============================= */
+footer {
+	width: 100%;
+	margin: 0 auto;
+	/* background-color: #CCCCCC; */
+	/* border: solid 1px; */
+}
+
+.ft-logo {
+	text-align: center;
+	padding: 20px 0;
+}
+
+.ft-logo img {
+	width: 150px;
+}
+
+.ft-nav-oya {
+	width: 100%;
+	margin: 0 auto;
+	background-color: #CCCCCC;
+}
+
+.ft-nav, .ft-nav2 {
+    width: 100%;
+	margin: 0 auto;
+	background-color: #CCCCCC;
+}
 
 
-	<!-- header-st -->
-	<header>
-		<div class="container">
-			<div class="logo-oya">
-				<div class="logo"><img src="img/logo-head.gif" alt=""></div>
-			</div>
 
-			<!-- ハンバーガメニューここから -->
-			<div class="hamburger-oya">
-				<div class="hamburger">
-					<span></span>
-					<span></span>
-					<span></span>
-				</div>
+/* ==========================
+         フッターリスト
+============================= */
+.list {
+	font-weight: bold;
+}
+
+.list a {
+	font-size: 18px;
+	color: #444444;
+	color: #000000;
+}
+
+.ft-nav ul,  .ft-nav2 ul{
+	height: 120px;
+	line-height: 120px;
+	text-align: center;
+	background-color: #CCCCCC; 
+	margin: 0 auto;
+}
+
+.ft-nav ul li,  .ft-nav2 ul li {
+	display: inline;
+	margin-right: 20px;
+	color: #444444;
+	font-size: small;
+	list-style: none;
+}
+
+.border {
+	padding-left:20px;
+	border-left:1px solid #999;
+}
+
+a {
+	text-decoration: none;
+}
+
+.ft-contact {
+    display: block;
+    position: relative;
+    width: 210px;
+    height: 40px;
+    line-height: 40px;
+    color: #000;
+    padding: 0;
+    text-align: center;
+    text-decoration: none;
+    border: #000000 1px solid;
+    border-radius: 30px;
+    margin: 0 auto;
+    font-size: 13px;
+    letter-spacing: 2px;
+}
+
+.ft-contact a {
+	color: #444444;
+	color: #000000;
+
+}
+
+/* ========================= */
+.sns {
+	width: 100%;
+	margin: 0 auto;
+	padding-top: 15px;
+	background-color: #CCCCCC; 
+	text-align: center;
+}
+/* ========================= */
+
+.Copyright {
+    width: 100%;
+	margin: 0 auto;
+	padding: 10px 0;
+	background-color: #CCCCCC;
+	text-align: center;
+}
+
+small {
+    color: #444444;
+	font-size: xx-small;
+}
+
+
+
+  /* ===========================
+           タブレット
+=========================== */
+  @media screen and (min-width:600px) and (max-width:960px){
+
+/* ===========================
+            ヘッダー
+=========================== */
+header {
+	width: 100%;
+}
+
+.container-oya {
+	width: 100%;
+}
+
+.container {
+	width: 100%;
+}
+
+.nav-oya {
+	width: 100%;
+}
+
+.nav {
+	width: 100%;
+}
+
+
+/*　ハンバーガーボタン　*/
+.hamburger {
+   display : block;
+   /* position: fixed;
+   position: relative; */
+   z-index : 3;
+   /* right : 13px; */
+   left: 380px;
+   top   : 12px;
+   /* top: 95px; */
+   width : 42px;
+   height: 42px;
+   cursor: pointer;
+   text-align: center;
+ }
+ .hamburger span {
+   display : block;
+   position: absolute;
+   width   : 30px;
+   height  : 2px ;
+   left    : 6px;
+   background : #555;
+   -webkit-transition: 0.3s ease-in-out;
+   -moz-transition   : 0.3s ease-in-out;
+   transition        : 0.3s ease-in-out;
+ }
+ .hamburger span:nth-child(1) {
+   top: 10px;
+ }
+ .hamburger span:nth-child(2) {
+   top: 20px;
+ }
+ .hamburger span:nth-child(3) {
+   top: 30px;
+ }
+ 
+ /* ナビ開いてる時のボタン */
+ .hamburger.active span:nth-child(1) {
+   top : 16px;
+   left: 6px;
+   -webkit-transform: rotate(-45deg);
+   -moz-transform   : rotate(-45deg);
+   transform        : rotate(-45deg);
+ }
+ 
+ .hamburger.active span:nth-child(2),
+ .hamburger.active span:nth-child(3) {
+   top: 16px;
+   -webkit-transform: rotate(45deg);
+   -moz-transform   : rotate(45deg);
+   transform        : rotate(45deg);
+ }
+ 
+.globalMenuSp {
+   visibility: visible;
+   height: 174px;
+}
+ nav.globalMenuSp {
+   position: fixed;
+   z-index : 2;
+   top: 25px;
+   left : 0;
+   color: #000;
+   /* background: #fff; */
+   text-align: center;
+   transform: translateX(100%);
+   transition: all 0.6s;
+   width: 100%;
+ }
+ 
+ nav.globalMenuSp ul {
+   background: #ccc;
+   /* margin: 0 auto; */
+   margin: 90px auto 0 auto;
+   padding: 0;
+   width: 100%;
+ }
+ 
+ nav.globalMenuSp ul li {
+   list-style-type: none;
+   padding: 0;
+   width: 100%;
+   border-top: 1px solid #fff;
+ }
+ 
+ nav.globalMenuSp ul li:hover{
+   background :#ddd;
+ }
+ 
+ nav.globalMenuSp ul li a {
+   display: block;
+   color: #444444;
+   padding: 1em 0;
+   text-decoration :none;
+ }
+ 
+ /* このクラスを、jQueryで付与・削除する */
+ nav.globalMenuSp.active {
+   transform: translateX(0%);
+
+ }
+  .nav {
+    display: none;
+ }
+
+ .logo-oya {
+	margin-left: 60px;
+ }
+
+ /* ==========================
+       ブランド展開
+============================= */
+.brand-list {
+    width: 100%;
+}
+/* ==========================
+         フッター
+============================= */
+.ft-logo img {
+	width: 240px;
+}
+
+.ft-nav-oya {
+	width: 100%;
+}
+
+.ft-nav, .ft-nav2 {
+    width: 100%;
+}
+
+
+.ft-nav ul {
+	width: 100%;
+    height: 30px;
+    line-height: 30px;
+	padding-top: 20px;
+}
+
+.ft-nav2 ul {
+	width: 100%;
+	height: 30px;
+    line-height: 30px;
+}
+
+.ft-contact {
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
+/* ========================= */
+.Copyright {
+    width: 100%;	
+}
+
+}
+
+  @media screen and (max-width: 600px) {
+/* ===========================
+            スマホ
+=========================== */
+/* ===========================
+            ヘッダー
+=========================== */
+.header {
+	width: 100%;
+}
+
+/* ========hover=========== */
+
+.container {
+	display: flex;
+    flex-direction: column;
+    align-items: center;
+	height: 120px;
+}
+
+.nav-oya {
+	width: 100%;
+}
+
+.logo-oya img {
+    margin-top: 30px;
+}
+
+/*　ハンバーガーボタン　*/
+.hamburger {
+	display : block;
+	/* position: fixed;
+	position: relative; */
+	z-index : 3;
+	/* right : 13px; */
+	left: 380px;
+	top   : 12px;
+	/* top: 95px; */
+	width : 42px;
+	height: 42px;
+	cursor: pointer;
+	text-align: center;
+  }
+  .hamburger span {
+	display : block;
+	position: absolute;
+	width   : 30px;
+	height  : 2px ;
+	left    : 6px;
+	background : #555;
+	-webkit-transition: 0.3s ease-in-out;
+	-moz-transition   : 0.3s ease-in-out;
+	transition        : 0.3s ease-in-out;
+  }
+  .hamburger span:nth-child(1) {
+	top: 10px;
+  }
+  .hamburger span:nth-child(2) {
+	top: 20px;
+  }
+  .hamburger span:nth-child(3) {
+	top: 30px;
+  }
+  
+  /* ナビ開いてる時のボタン */
+  .hamburger.active span:nth-child(1) {
+	top : 16px;
+	left: 6px;
+	-webkit-transform: rotate(-45deg);
+	-moz-transform   : rotate(-45deg);
+	transform        : rotate(-45deg);
+  }
+  
+  .hamburger.active span:nth-child(2),
+  .hamburger.active span:nth-child(3) {
+	top: 16px;
+	-webkit-transform: rotate(45deg);
+	-moz-transform   : rotate(45deg);
+	transform        : rotate(45deg);
+  }
+  
+ .globalMenuSp {
+	visibility: visible;
+	height: 174px;
+ }
+  nav.globalMenuSp {
+	position: fixed;
+	z-index : 2;
+	top: 60px;
+	left : 0;
+	color: #000;
+	/* background: #fff; */
+	text-align: center;
+	transform: translateX(100%);
+	transition: all 0.6s;
+	width: 100%;
+  }
+  
+  nav.globalMenuSp ul {
+	background: #ccc;
+	/* margin: 0 auto; */
+	margin: 90px auto 0 auto;
+	padding: 0;
+	width: 100%;
+  }
+  
+  nav.globalMenuSp ul li {
+	list-style-type: none;
+	padding: 0;
+	width: 100%;
+	border-top: 1px solid #fff;
+  }
+  
+  nav.globalMenuSp ul li:hover{
+	background :#ddd;
+  }
+  
+  nav.globalMenuSp ul li a {
+	display: block;
+	color: #444444;
+	padding: 1em 0;
+	text-decoration :none;
+  }
+  
+  /* このクラスを、jQueryで付与・削除する */
+  nav.globalMenuSp.active {
+	transform: translateX(0%);
+ 
+  }
+ 
+   .nav {
+	 display: none;
+  }
+
+/* ==========================
+          写真3列2行
+============================= */
+.brand-list{
+	width: 90%;
+	flex-direction: column;
+}
+
+.brand-list li {
+    width: 100%;
+    padding: 20px 0 20px 25px;
+}
+
+.brand_ttl {
+	width: 100%;;
+}
+  /* ==========================
+         フッター
+============================= */
+.ft-logo img {
+	width: 30%;
+}
+
+ .ft-nav ul {
+    display: flex;
+    flex-direction: column;
+    line-height: 30px;
+    padding-top: 20px
+} 
+
+.ft-nav2 ul {
+	margin-left: 20px;
+	height: 30px;
+    line-height: 30px;
+}
+
+.ft-contact {
+	margin-top: 50px;
+	margin-bottom: 20px;
+} 
+
+.list a {
+    font-size: 12px;
+}
+
+
+} 
+
 				
-				<nav class="globalMenuSp">
-					<ul>
-						<li><a href="#">ホーム</a></li>
-						<li><a href="company.html" target="_blank" rel="noopener">企業情報</a></li>
-						<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
-						<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
-						<li><a href="recruit.html" target="_blank" rel="noopener">採用</a></li>
-						<li><a href="contact.html" target="_blank" rel="noopener">お問い合わせ</a></li>
-					</ul>
-				</nav>
-			</div>
-			<!-- ハンバーガメニューここまで -->
-			<div class="nav-oya">
-				<nav class="nav">
-					<ul>
-						<li><a href="#">ホーム</a></li>
-						<li><a href="company.html" target="_blank" rel="noopener">企業情報</a></li>
-						<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
-						<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
-						<li><a href="recruit.html" target="_blank" rel="noopener">採用</a></li>
-						<li><a href="contact.html" target="_blank" rel="noopener">お問い合わせ</a></li>
-					</ul>
-				</nav>
-			</div>
-	    </div>
-	</header>
-    <!-- header-end -->
-
-	<!-- slide-st -->
-	<div class="brand_main">
-		<div class="wrap">
-			<ul class="slider">
-				<li><img src="img/slide.jpg" alt=""></li>
-				<li><img src="img/slide.jpg" alt=""></li>
-				<li><img src="img/slide.jpg" alt=""></li>
-				<li><img src="img/slide.jpg" alt=""></li>
-				<li><img src="img/slide.jpg" alt=""></li>
-				<li><img src="img/slide.jpg" alt=""></li>
-			</ul>
-		</div>
-	</div>
-    <!-- slide-end -->
-
-	<!-- /.contents-oya-st-->
-	<div class="contents-oya">
-		<div class="brand_detail">
-			<div class="brand_ttl">
-				<h1>お客様満足へのこだわり</h1>
-				<p>沢山のお客様からいただく驚きや満足の声の為に、私たちは全てにこだわります。<br>
-					夢丸を選んで来店してくれたお客様に時間を気にせず、ゆっくりしていただける様に<br>
-					”とことん”こだわり続けます。
-				</p>
-			</div> 
-		</div>
-		<div class="brand_detail">
-			<div class="brand_ttl">
-				<h2><span>"わたしたちが伝えたいこと"</span><br>MESSAGE</h2>
-			</div> 
-			<ul class="brand-list">
-				<li>
-					<a href="#" target="_blank" rel="noopener"><img src="img/message_03.jpg" alt=""></a>
-					<p>テキストテキストテキストテキストテキスト</p>
-				</li>
-				<li>
-					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
-					<p>テキストテキストテキストテキストテキスト</p>
-				</li>
-				
-				<li>
-					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
-					<p>テキストテキストテキストテキストテキスト</p>
-				</li>
-				<li>
-					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
-					<p>テキストテキストテキストテキストテキスト</p>
-				</li>
-				<li>
-					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
-					<p>テキストテキストテキストテキストテキスト</p>
-				</li>
-				<li>
-					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
-					<p>テキストテキストテキストテキストテキスト</p>
-				</li>
-				<li>
-					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
-					<p>テキストテキストテキストテキストテキスト</p>
-				</li>
-				<li>
-					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
-					<p>テキストテキストテキストテキストテキスト</p>
-				</li>
-				<li>
-					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
-					<p>テキストテキストテキストテキストテキスト</p>
-				</li>
-				<li>
-					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
-					<p>テキストテキストテキストテキストテキスト</p>
-				</li>
-				<li>
-					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
-					<p>テキストテキストテキストテキストテキスト</p>
-				</li>
-				<li>
-					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
-					<p>テキストテキストテキストテキストテキスト</p>
-				</li>
-			</ul>
-		</div>
-    </div>    
-	<!-- /.contents-oya-->
-
-	
-	<!-- footer-st -->
-	<footer>
-		<div class="ft-nav-oya">
-			<div class="ft-nav">
-				<ul class="list" >
-					<li><a href="#">ホーム</a></li>
-					<li><a href="company.html" target="_blank" rel="noopener">企業情報</a></li>
-					<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
-					<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
-					<li><a href="recruit.html" target="_blank" rel="noopener">採用</a></li>
-				</ul>
-		    </div>
-			<div class="ft-nav">
-				<div class="ft-contact"><a href="contact.html" target="_blank" rel="noopener">お問い合わせ</a></div>
-		    </div>
-			<div class="ft-nav2">
-				<ul>
-					<a href="about.html" target="_blank" rel="noopener"><li>サイトのご利用について</li></a>
-					<a href="privacy policy.html" target="_blank" rel="noopener"><li class="border">プライバシーポリシー</li></a>
-				</ul>
-		    </div>
-			<div class="ft-logo">
-				<a href="#"><img src="img/foot_logo_tokukei.gif" alt=""></a>
-			</div>
-			<div class="sns">
-				<a href="#" target="_blank" rel="noopener"><img src="img/fb.png" alt="" width="15"></a>
-				<a href="#" target="_blank" rel="noopener"><img src="img/tw2.png" alt="" width="15"></a>
-				<a href="#" target="_blank" rel="noopener"><img src="img/ico_inst.png" alt="" width="16"></a>
-				<a href="#" target="_blank" rel="noopener"><img src="img/line.png" alt="" width="16"></a>
-				<!-- <a href=""><img src="img/mail3.png" alt="" width="20"></a> -->
-			</div>
-		</div>
-		<div class="Copyright">
-			<small>Copyright c Tokukei. All Rights Reserved.</small>
-	    </div>
-	</footer>
-	<!-- footer-end -->
-</body>
-</html>
