--- a/css/style-recruit.css
+++ b/css/style-recruit.css
@@ -149,8 +149,6 @@ ul li img {
     text-align: center;
 }
 
-
-
 /* ==========================
           写真3列2行
 ============================= */
@@ -203,7 +201,7 @@ footer {
 	background-color: #CCCCCC;
 }
 
-.ft-nav {
+.ft-nav, .ft-nav2 {
     width: 100%;
 	margin: 0 auto;
 	background-color: #CCCCCC;
@@ -222,7 +220,8 @@ footer {
 	color: #000000;
 }
 
-.ft-nav ul {
+
+.ft-nav ul,  .ft-nav2 ul{
 	height: 120px;
 	line-height: 120px;
 	text-align: center;
@@ -230,7 +229,7 @@ footer {
 	margin: 0 auto;
 }
 
-.ft-nav ul li {
+.ft-nav ul li,  .ft-nav2 ul li {
 	display: inline;
 	margin-right: 20px;
 	color: #444444;
@@ -293,7 +292,7 @@ small {
 	font-size: xx-small;
 }
 
-  /* ===========================
+/* ===========================
            タブレット
 =========================== */
   @media screen and (min-width:600px) and (max-width:960px){
@@ -301,49 +300,26 @@ small {
             ヘッダー
 =========================== */
 header {
+	width: 100%;
 	height: 115px;
 }
 
 .container-oya {
 	width: 100%;
-    margin: 15px auto 0 auto;
-    padding: 10px 10px 0 10px;
-    justify-content: space-between;
-    align-items: center;
-	
 }
 
+.container {
+	width: 100%;
+}
 
 .nav-oya {
 	width: 100%;
-    margin: 0 auto;
-	padding: 10px 10px 0 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-	/* background-color: beige; 後で削除する */
 }
 
 .nav {
 	width: 100%;
 	padding: 0 0 25px 0;
 }
-
-.nav li {
-    margin-left: 10px;
-	display: block;
-	float: left;
-	background-color: #444444;
-    height: 40px;
-	line-height: 40px;
-    width: 190px;
-    text-align: center;
-	font-size: smaller;
-}
-
-
-
-
 
 
 /*　ハンバーガーボタン　*/
@@ -456,8 +432,23 @@ header {
  }
 
  .logo-oya {
-	 display: none;
+	margin-left: 60px;
  }
+
+ /* ==========================
+       ブランド展開
+============================= */
+.brand_ttl {
+	width: 100%;
+}
+
+/* ==========================
+          写真3列2行
+============================= */
+.brand-list{
+	width: 100%;
+}
+
 /* ==========================
          フッター
 ============================= */
@@ -470,13 +461,13 @@ header {
 .ft-nav-oya {
 	width: 100%;
 }
-
-.ft-nav {
+.ft-nav, .ft-nav2 {
     width: 100%;
 }
 
 .ft-nav ul {
 	width: 100%;
+	padding-top: 20px;
 }
 
 /* ========================= */
@@ -496,47 +487,6 @@ header {
 =========================== */
 header {
 	width: 100%;
-	height: 150px;
-	margin: 0 auto;
-	/* background-color: aqua;  後で削除する */
-	background-color: #CCCCCC;
-	position: fixed;
-	top: 0;
-	left: 0;
-	z-index: 500;
-}
-
-.container-oya {
-	width: 100%;
-    margin: 0 auto;
-	display: flex;
-    /* flex-direction: column; */
-    align-items: center; 
-}
-
-.logo img {
-	padding-top: 5px;
-	width:180px;
-}
-
-.hd-icon {
-	width: 160px;
-	margin: 20px 20px 0 20px;
-	text-align: center;
-	background-color: #ffffff;	
-}
-
-.hd-icon a {
-	color: #444444;
-}
-/* ========hover=========== */
-
-.hd-icon:hover {
-	background-color: #444444;
-}
-
-.hd-icon p:hover {
-	color: #ffffff;
 }
 
 /* ========hover=========== */
@@ -545,32 +495,16 @@ header {
 	display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.container img {
-	padding: 0 5px;
+	height: 120px;
 }
 
 .nav-oya {
-	/* width: 960px; */
-	height: 5px;
-	/* width: 100%;
-    margin: 0 auto;
-	padding: 10px 10px 0 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center; */
-	/* background-color: beige; 後で削除する */
+	width: 100%;
 }
 
-
-
-
-
-
-
-
-
+.logo-oya img {
+    margin-top: 30px;
+}
 /*　ハンバーガーボタン　*/
 .hamburger {
 	display : block;
@@ -631,7 +565,7 @@ header {
   nav.globalMenuSp {
 	position: fixed;
 	z-index : 2;
-	top: 60px;
+	/* top: 60px; */
 	left : 0;
 	color: #000;
 	/* background: #fff; */
@@ -680,90 +614,53 @@ header {
 	 display: none;
   }
 
+  /* ==========================
+       ブランド展開
+============================= */
+.brand_ttl {
+	width: 80%;
+}
+
+.brand-list li {
+	width: 60%;
+	}
+	
+/* ==========================
+          写真3列2行
+============================= */
+.brand-list{
+	width: 100%;
+	flex-direction: column;
+	align-items: center;
+}
 
   /* ==========================
          フッター
 ============================= */
-footer {
-	width: 100%;
-	margin: 0 auto;
-	background-color: #CCCCCC;
-}
-
-.ft-logo {
-	text-align: center;
-	padding-top: 30px;
-}
-
 .ft-logo img {
-	width: 240px;
-}
-
-.ft-nav-oya {
-	width: 100%;
-	margin: 0 auto;
-	background-color: #CCCCCC;
-}
-
-.ft-nav {
-    width: 100%;
-	margin: 0 auto;
-	background-color: #CCCCCC;
+	width: 30%;
 }
 
 .ft-nav ul {
-	width: 68%;
-	line-height: 30px;
-	display: flex;
+    display: flex;
     flex-direction: column;
-	background-color: #CCCCCC; 
-	margin: 30px auto;
-	padding-left: 80px;
-    text-align: start;
+    line-height: 30px;
+    padding-top: 20px
+} 
+
+.ft-nav2 ul {
+	margin-left: 20px;
+	height: 30px;
+    line-height: 30px;
 }
 
-.ft-nav ul li {
-	display: inline;
-	/* margin-right: 10px; */
-	margin: 0 auto;
-	color: #444444;
-	font-size: small;
-	list-style: none;
-	padding-left:10px;
-	border-left:1px solid #999;
-}
+.ft-contact {
+	margin-top: 50px;
+	margin-bottom: 20px;
+} 
 
-.display-none {
-	border-left:0;
-	padding-left:0;
-}
-
-a {
-	text-decoration: none;
-}
-
-/* ========================= */
-.sns {
-	width: 100%;
-	margin: 0 auto;
-	padding-top: 15px;
-	background-color: #CCCCCC; 
-	text-align: center;
-}
-
-/* ========================= */
-
-.Copyright {
-    width: 100%;
-	margin: 0 auto;
-	padding: 10px 0;
-	background-color: #CCCCCC;
-	text-align: center;
-}
-
-small {
-    color: #444444;
-	font-size: xx-small;
+.list a {
+    font-size: 16px;
 }
 
 
