--- a/css/style-recruit.css
+++ b/css/style-recruit.css
@@ -176,6 +176,7 @@ ul li img {
 .brand-list p {
 	text-align: center;
 }
+
 /* ==========================
          フッター
 ============================= */
@@ -188,11 +189,11 @@ footer {
 
 .ft-logo {
 	text-align: center;
-	padding: 20px 0;
+	padding: 5px 0 20px 0;
 }
 
 .ft-logo img {
-	width: 150px;
+	width: 100px;
 }
 
 .ft-nav-oya {
@@ -220,10 +221,17 @@ footer {
 	color: #000000;
 }
 
-
-.ft-nav ul,  .ft-nav2 ul{
+.ft-nav ul {
 	height: 120px;
-	line-height: 120px;
+	line-height: 130px;
+	text-align: center;
+	background-color: #CCCCCC; 
+	margin: 0 auto;
+}
+
+.ft-nav2 ul{
+	height: 80px;
+	line-height: 80px;
 	text-align: center;
 	background-color: #CCCCCC; 
 	margin: 0 auto;
@@ -273,12 +281,11 @@ a {
 .sns {
 	width: 100%;
 	margin: 0 auto;
-	padding-top: 15px;
+	/* padding-top: 15px; */
 	background-color: #CCCCCC; 
 	text-align: center;
 }
 /* ========================= */
-
 .Copyright {
     width: 100%;
 	margin: 0 auto;
@@ -452,28 +459,43 @@ header {
 /* ==========================
          フッター
 ============================= */
-
-
 .ft-logo img {
-	width: 240px;
+	width: 100px;
+}
+
+.ft-logo {
+    padding: 20px 0 ;
 }
 
 .ft-nav-oya {
 	width: 100%;
 }
+
 .ft-nav, .ft-nav2 {
     width: 100%;
 }
 
 .ft-nav ul {
 	width: 100%;
+    height: 30px;
+    line-height: 30px;
 	padding-top: 20px;
+}
+
+.ft-nav2 ul {
+	width: 100%;
+	height: 30px;
+    line-height: 30px;
+}
+
+.ft-contact {
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
 
 /* ========================= */
 .Copyright {
-    width: 100%;
-	
+    width: 100%;	
 }
 
 }
@@ -634,24 +656,30 @@ header {
 	align-items: center;
 }
 
-  /* ==========================
+/* ==========================
          フッター
 ============================= */
 .ft-logo img {
-	width: 30%;
+	width: 20%;
 }
 
-.ft-nav ul {
+.ft-logo {
+    padding: 20px 0;
+}
+
+ .ft-nav ul {
     display: flex;
     flex-direction: column;
     line-height: 30px;
-    padding-top: 20px
+    padding-top: 20px;
+	padding-bottom: 10px;
 } 
 
 .ft-nav2 ul {
-	margin-left: 20px;
+	/* margin-left: 20px; */
 	height: 30px;
     line-height: 30px;
+	padding: 0;
 }
 
 .ft-contact {
@@ -663,11 +691,9 @@ header {
     font-size: 14px;
 }
 
-.ft-nav ul li {
-    margin-right: 0;
+.ft-nav2 ul li {
+	margin-right: 20px;
 }
-
-
 
 } 
 
