--- a/css/style-contact-fc.css
+++ b/css/style-contact-fc.css
@@ -284,9 +284,6 @@ textarea {
   text-align: center;
 }
 
-
-
-
 /* ==========================
          フッター
 ============================= */
@@ -299,11 +296,11 @@ footer {
 
 .ft-logo {
 	text-align: center;
-	padding: 20px 0;
+	padding: 5px 0 20px 0;
 }
 
 .ft-logo img {
-	width: 150px;
+	width: 100px;
 }
 
 .ft-nav-oya {
@@ -312,7 +309,7 @@ footer {
 	background-color: #CCCCCC;
 }
 
-.ft-nav {
+.ft-nav, .ft-nav2 {
     width: 100%;
 	margin: 0 auto;
 	background-color: #CCCCCC;
@@ -333,13 +330,21 @@ footer {
 
 .ft-nav ul {
 	height: 120px;
-	line-height: 120px;
+	line-height: 130px;
 	text-align: center;
 	background-color: #CCCCCC; 
 	margin: 0 auto;
 }
 
-.ft-nav ul li {
+.ft-nav2 ul{
+	height: 80px;
+	line-height: 80px;
+	text-align: center;
+	background-color: #CCCCCC; 
+	margin: 0 auto;
+}
+
+.ft-nav ul li, .ft-nav2 ul li {
 	display: inline;
 	margin-right: 20px;
 	color: #444444;
@@ -383,12 +388,11 @@ a {
 .sns {
 	width: 100%;
 	margin: 0 auto;
-	padding-top: 15px;
+	/* padding-top: 15px; */
 	background-color: #CCCCCC; 
 	text-align: center;
 }
 /* ========================= */
-
 .Copyright {
     width: 100%;
 	margin: 0 auto;
@@ -410,50 +414,24 @@ small {
             ヘッダー
 =========================== */
 header {
-	height: 115px;
+	width: 100%;
 }
 
 .container-oya {
 	width: 100%;
-    margin: 15px auto 0 auto;
-    padding: 10px 10px 0 10px;
-    justify-content: space-between;
-    align-items: center;
-	
 }
 
+.container {
+	width: 100%;
+}
 
 .nav-oya {
 	width: 100%;
-    margin: 0 auto;
-	padding: 10px 10px 0 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-	/* background-color: beige; 後で削除する */
 }
 
 .nav {
 	width: 100%;
-	padding: 0 0 25px 0;
 }
-
-.nav li {
-    margin-left: 10px;
-	display: block;
-	float: left;
-	background-color: #444444;
-    height: 40px;
-	line-height: 40px;
-    width: 190px;
-    text-align: center;
-	font-size: smaller;
-}
-
-
-
-
-
 
 /*　ハンバーガーボタン　*/
 .hamburger {
@@ -515,7 +493,7 @@ header {
  nav.globalMenuSp {
    position: fixed;
    z-index : 2;
-   top: 25px;
+   top: 15px;
    left : 0;
    color: #000;
    /* background: #fff; */
@@ -559,39 +537,146 @@ header {
    transform: translateX(0%);
 
  }
-
-  .nav {
+ .nav {
     display: none;
  }
 
  .logo-oya {
-	 display: none;
+	margin-left: 60px;
  }
+ .nav {
+    display: none;
+ }
+
+ .logo-oya {
+	margin-left: 60px;
+ }
+
+ .mainvisual {
+    padding-top: 30px;
+	padding-bottom: 0;
+}
+
+ .mainvisual h1 {
+    font-size: 26px;
+}
+
+.contents-oya {
+    padding-bottom: 30px;
+}
+ /* ======================= */
+/* contact */
+/* ======================= */
+.box {
+	width: 100%;
+ }
+
+ .box h2 {
+	 font-size: 22px;
+ }
+
+ 
+ .contact-ttl {
+	width: 80%;
+ }
+
+/* ======================= */
+/* CONTACT FORM  */
+/* ======================= */
+#top {
+   width: 100%;   
+  }
+
+.cont {
+   width: 80%;
+}
+
+.form-cont {
+  width: 100%;
+}
+
+form {
+ width: 100%;
+}
+ 
+/* ======================= */
+
+input[type="text"] {
+  width: 100%;
+}
+
+input[type="email"] {
+  width: 100%;
+}
+
+textarea {
+  min-width: 100%;
+}
+
+.caution {
+  width: 100%;
+}
+
+.kind {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.button {
+  width: 100%;
+  
+}
+.btn {
+ 
+  width: 400px;
+  
+}
+
+
 /* ==========================
          フッター
 ============================= */
-
-
 .ft-logo img {
-	width: 240px;
+	width: 100px;
+}
+
+.ft-logo {
+    padding: 20px 0 ;
 }
 
 .ft-nav-oya {
 	width: 100%;
 }
 
-.ft-nav {
+.ft-nav, .ft-nav2 {
     width: 100%;
 }
 
 .ft-nav ul {
 	width: 100%;
+    height: 30px;
+    line-height: 30px;
+	padding-top: 20px;
+	padding-left: 0;
+}
+
+.ft-nav2 ul {
+	width: 100%;
+	height: 30px;
+    line-height: 30px;
+	padding-left: 0;
+}
+
+.ft-contact {
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
 
 /* ========================= */
 .Copyright {
-    width: 100%;
-	
+    width: 100%;	
 }
 
 }
@@ -603,49 +688,8 @@ header {
 /* ===========================
             ヘッダー
 =========================== */
-header {
+.header {
 	width: 100%;
-	height: 150px;
-	margin: 0 auto;
-	/* background-color: aqua;  後で削除する */
-	background-color: #CCCCCC;
-	position: fixed;
-	top: 0;
-	left: 0;
-	z-index: 500;
-}
-
-.container-oya {
-	width: 100%;
-    margin: 0 auto;
-	display: flex;
-    /* flex-direction: column; */
-    align-items: center; 
-}
-
-.logo img {
-	padding-top: 5px;
-	width:180px;
-}
-
-.hd-icon {
-	width: 160px;
-	margin: 20px 20px 0 20px;
-	text-align: center;
-	background-color: #ffffff;	
-}
-
-.hd-icon a {
-	color: #444444;
-}
-/* ========hover=========== */
-
-.hd-icon:hover {
-	background-color: #444444;
-}
-
-.hd-icon p:hover {
-	color: #ffffff;
 }
 
 /* ========hover=========== */
@@ -654,31 +698,16 @@ header {
 	display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.container img {
-	padding: 0 5px;
+	height: 110px;
 }
 
 .nav-oya {
-	/* width: 960px; */
-	height: 5px;
-	/* width: 100%;
-    margin: 0 auto;
-	padding: 10px 10px 0 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center; */
-	/* background-color: beige; 後で削除する */
+	width: 100%;
 }
 
-
-
-
-
-
-
-
+.logo-oya img {
+    margin-top: 30px;
+}
 
 /*　ハンバーガーボタン　*/
 .hamburger {
@@ -782,102 +811,152 @@ header {
   /* このクラスを、jQueryで付与・削除する */
   nav.globalMenuSp.active {
 	transform: translateX(0%);
- 
   }
  
    .nav {
 	 display: none;
   }
 
+/* ======================= */
+/* contact */
+/* ======================= */
+.mainvisual {
+    padding-top: 30px;
+	padding-bottom: 0;
+}
 
-  /* ==========================
+ .mainvisual h1 {
+    font-size: 26px;
+}
+
+.contents-oya {
+    padding-bottom: 30px;
+}
+ /* ======================= */
+/* contact */
+/* ======================= */
+.box {
+	width: 100%;
+ }
+
+ .box h2 {
+	 font-size: 22px;
+ }
+
+ 
+ .contact-ttl {
+	width: 80%;
+ }
+
+/* ======================= */
+/* CONTACT FORM  */
+/* ======================= */
+#top {
+   width: 100%;   
+   margin-bottom: 30px;
+  }
+
+.cont {
+   width: 80%;
+}
+
+.form-cont {
+  width: 100%;
+}
+
+form {
+ width: 100%;
+}
+ 
+/* ======================= */
+
+input[type="text"] {
+  width: 100%;
+}
+
+input[type="email"] {
+  width: 100%;
+}
+
+textarea {
+  min-width: 100%;
+}
+
+.caution {
+  width: 100%;
+}
+
+.kind {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.kind p {
+	font-size: 16px;
+}
+
+.button {
+  width: 100%;
+  
+}
+.btn {
+  width: 100%;
+  padding: 15px;
+  font-size: 20px;
+}
+
+.center {
+    font-size: 20px;
+    
+}
+
+.caution h3 {
+    font-size: 20px;
+}
+p.privacy {
+	font-size: 16px;
+}
+
+/* ==========================
          フッター
 ============================= */
-footer {
-	width: 100%;
-	margin: 0 auto;
-	background-color: #CCCCCC;
+.ft-logo img {
+	width: 20%;
 }
 
 .ft-logo {
-	text-align: center;
-	padding-top: 30px;
+    padding: 20px 0;
 }
 
-.ft-logo img {
-	width: 240px;
-}
-
-.ft-nav-oya {
-	width: 100%;
-	margin: 0 auto;
-	background-color: #CCCCCC;
-}
-
-.ft-nav {
-    width: 100%;
-	margin: 0 auto;
-	background-color: #CCCCCC;
-}
-
-.ft-nav ul {
-	width: 68%;
-	line-height: 30px;
-	display: flex;
+ .ft-nav ul {
+    display: flex;
     flex-direction: column;
-	background-color: #CCCCCC; 
-	margin: 30px auto;
-	padding-left: 80px;
-    text-align: start;
+    line-height: 30px;
+    padding-top: 20px;
+	padding-bottom: 10px;
+} 
+
+.ft-nav2 ul {
+	/* margin-left: 20px; */
+	height: 30px;
+    line-height: 30px;
+	padding: 0;
 }
 
-.ft-nav ul li {
-	display: inline;
-	/* margin-right: 10px; */
-	margin: 0 auto;
-	color: #444444;
-	font-size: small;
-	list-style: none;
-	padding-left:10px;
-	border-left:1px solid #999;
+.ft-contact {
+	margin-top: 50px;
+	margin-bottom: 20px;
+} 
+
+.list a {
+    font-size: 14px;
 }
 
-.display-none {
-	border-left:0;
-	padding-left:0;
+.ft-nav2 ul li {
+	margin-right: 20px;
 }
-
-a {
-	text-decoration: none;
-}
-
-/* ========================= */
-.sns {
-	width: 100%;
-	margin: 0 auto;
-	padding-top: 15px;
-	background-color: #CCCCCC; 
-	text-align: center;
-}
-
-/* ========================= */
-
-.Copyright {
-    width: 100%;
-	margin: 0 auto;
-	padding: 10px 0;
-	background-color: #CCCCCC;
-	text-align: center;
-}
-
-small {
-    color: #444444;
-	font-size: xx-small;
-}
-
-
-
-
 
 } 
 
